git機能の無効化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
     "workbench.colorTheme": "Default Light+",
     "files.exclude": {
         "bin/": true
-    }
+    },
+      // Git が有効になっているかどうか
+    "git.enabled": false
 }
