Previewモード禁止
タブが上書きされるPreviewモードを強制的に禁止する設定
https://qiita.com/kgoto/items/265e3eb8a82778e33cfe

--- a/java_kadai/.vscode/settings.json
+++ b/java_kadai/.vscode/settings.json
@@ -7,6 +7,7 @@
     "files.exclude": {
         "bin/": true
     },
+    "workbench.editor.enablePreview": false,
       // Git が有効になっているかどうか
     "git.enabled": false,
     "terminal.integrated.shell.windows": "C://byod/PortableGit/bin/bash.exe"
