--- a/java_src/.vscode/settings.json
+++ b/java_src/.vscode/settings.json
@@ -14,7 +14,7 @@
     "terminal.integrated.shell.windows": "C:\\oit\\PortableGit-2.17.0-64\\bin\\bash.exe",
     "terminal.integrated.env.windows": {
         "MSYSTEM": "MINGW64",
-        "CHERE_INVOKING": 1
+        "CHERE_INVOKING": "1"
     },
     "terminal.integrated.shellArgs.windows":["--login"]
 }
