--- a/java_src/.vscode/launch.json
+++ b/java_src/.vscode/launch.json
@@ -1,21 +1,18 @@
 {
-    // IntelliSense を使用して利用可能な属性を学べます。
-    // 既存の属性の説明をホバーして表示します。
-    // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "java",
-            "name": "Debug (Launch)",
-            "request": "launch",
-            "mainClass": "${fileBasenameNoExtension}",
-            "args": "",
-            "preLaunchTask": "Compile(for Debug)",
-            "console": "externalTerminal",
-            "encoding": "UTF-8",
-            "classPaths": [
-                "${workspaceFolder}\\bin"
-            ]
-        }
-    ]
+  "configurations": [
+    {
+      "type": "java",
+      "name": "Debug (Launch)",
+      "request": "launch",
+      "mainClass": "${fileBasenameNoExtension}",
+      "args": "",
+      "preLaunchTask": "log for debug",
+      "console": "externalTerminal",
+      "stopOnEntry": false,
+      "encoding": "UTF-8",
+      "classPaths": [
+        "${workspaceFolder}\\bin"
+      ]
+    }
+  ]
 }
