getjava追加．不要ファイル削除，README更新

--- a/java_src/.classpath
+++ b/java_src/.classpath
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="java01"/>
+  <classpathentry kind="src" path="lec01"/>
+  <classpathentry kind="src" path="lec02"/>
+  <classpathentry kind="src" path="lec03"/>
+  <classpathentry kind="src" path="lec04"/>
+  <classpathentry kind="src" path="lec05"/>
+  <classpathentry kind="src" path="lec06"/>
+  <classpathentry kind="src" path="lec07"/>
+  <classpathentry kind="src" path="lec08"/>
+  <classpathentry kind="src" path="lec09"/>
+  <classpathentry kind="src" path="lec10"/>
+  <classpathentry kind="src" path="lec11"/>
+  <classpathentry kind="src" path="lec12"/>
+  <classpathentry kind="src" path="lec13"/>
+  <classpathentry kind="src" path="lec14"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
