update vscode setup

--- a/java_src/.vscode/settings.json
+++ b/java_src/.vscode/settings.json
@@ -30,7 +30,7 @@
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "editor.detectIndentation": false,
-  "editor.tabCompletion": true,
+  "editor.tabCompletion": "on",
   "editor.wordWrap": "on",
   "extensions.ignoreRecommendations": true,
   "files.autoSave": "onFocusChange",
