--- a/java_src/.vscode/settings.json
+++ b/java_src/.vscode/settings.json
@@ -1,18 +1,19 @@
 {
   "files.encoding": "utf8",
-  "java.home": "c://oit//openjdk1.8.0.181",
+  "java.home": "c://oit//openjdk1.8.0.191",
   "java.jdt.ls.vmargs": "-noverify -Dfile.encoding=utf8",
   "java.errors.incompleteClasspath.severity": "ignore",
   "workbench.colorTheme": "Default Light+",
   "files.exclude": {
     "bin/": true,
-    ".*": true
+    ".*": true,
+    "**/.*": true,
   },
   "workbench.editor.enablePreview": false,
   // Git が有効になっているかどうか
   "git.ignoreMissingGitWarning": true,
   "git.enabled": false,
-  "terminal.integrated.shell.windows": "C:\\oit\\PortableGit-2.19.1-64\\usr\\bin\\bash.exe",
+  "terminal.integrated.shell.windows": "C:\\oit\\PortableGit-2.20.1-64\\usr\\bin\\bash.exe",
   "terminal.integrated.env.windows": {
     "MSYSTEM": "MINGW64",
     "CHERE_INVOKING": "1"
@@ -21,7 +22,6 @@
     "--login",
     "-i"
   ],
-  "terminal.integrated.setLocaleVariables": true,
   "files.eol": "\n",
   "editor.renderWhitespace": "boundary",
   "editor.fontFamily": "Consolas, monospace",
