vscode setting大幅設定変更＆launch.jsonにms932設定追加

--- a/java_src/.vscode/launch.json
+++ b/java_src/.vscode/launch.json
@@ -8,10 +8,7 @@
       "args": "",
       "console": "integratedTerminal",
       "stopOnEntry": false,
-      "encoding": "UTF-8",
-      //"env": {
-      //  "JAVA_TOOL_OPTIONS": "-Dsun.jnu.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dsun.stderr.encoding=UTF-8"
-      //},
+      "encoding": "ms932",
       "classPaths": [
         "${workspaceFolder}\\bin"
       ]
