--- a/vscode/User/settings.json
+++ b/vscode/User/settings.json
@@ -1,6 +1,6 @@
 {
     "update.enableWindowsBackgroundUpdates": false,
-    "update.channel": "none",
+    "update.mode": "none",
     "update.showReleaseNotes": false,
     "extensions.autoCheckUpdates": false,
     "extensions.autoUpdate": false
